패키지 정보 입력, 로그인 기능 일부수정
윈도우 플랫폼의 출시를 위한 패키지 정보입력
로그인/회원가입의 email, userid를 id2, id로 변경

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -363,4 +363,10 @@ It needs to be updated.</value>
   <data name="username" xml:space="preserve">
     <value>Username</value>
   </data>
+  <data name="user_id" xml:space="preserve">
+    <value>id</value>
+  </data>
+  <data name="user_id2" xml:space="preserve">
+    <value>id2</value>
+  </data>
 </root>
